# python-poppler

./: meson.build
src/cpp/: image.cpp
subprojects/: pybind11.wrap
